[package]
name = "piston_demo"
version = "0.1.0"
authors = ["wusj7856 <wusj@realbull.net>"]
edition = "2018"

[[bin]]
name = "draw_state"
path = "src/draw_state.rs"

[[bin]]
name = "draw_rust_logo"
path = "src/draw_rust_logo.rs"

[dependencies]
piston_window = { path="./piston_window-0.85.0",features = ["glutin"] }
find_folder = "0.3.0"
vecmath = "0.3.0"
nbez = "0.1.0"
glutin = "0.19"

[dependencies.pistoncore-glutin_window]
path = "./pistoncore-glutin_window-0.51.1"

