[package]
name = "piston_demo"
version = "0.1.0"
authors = ["wusj7856 <wusj@realbull.net>"]
edition = "2018"

[lib]
name = "piston_demo"
path = "src/lib.rs"

[[bin]]
name = "draw_state"
path = "src/draw_state.rs"

[[bin]]
name = "draw_rust_logo"
path = "src/draw_rust_logo.rs"

[[bin]]
name = "game_of_life"
path = "src/game_of_life.rs"

[dependencies]
piston_window = { version = "0.85.0",features = ["glutin"] }
find_folder = "0.3.0"
rand = "0.5"

[dependencies.pistoncore-glutin_window]
version = "0.51.0"

[dependencies.vecmath]
version = "0.3"

[dependencies.gl]
version = "0.11.0"

[dependencies.glutin]
version = "0.19.0"


[dependencies.pistoncore-input]
version = "0.24.0"

[dependencies.pistoncore-window]
version = "0.37.0"

[dependencies.shader_version]
version = "0.3.0"

[dependencies.test_beizer]
path = "./test_beizer"

